# CSxD

./: CMakeLists.txt  CSxD.drawio  README.md
src/: CMakeLists.txt  Command.h  GamePlay.cpp  GamePlay.h  Interactions.cpp  Interactions.h  main.cpp  weapons.json
src/exceptions/: ActionAtIllegalTimeException.cpp  ActionAtIllegalTimeException.h  ActionFromDeadPlayerException.cpp  ActionFromDeadPlayerException.h  AttackDeadPlayerException.cpp  AttackDeadPlayerException.h  FriendlyFireException.cpp  FriendlyFireException.h  LastRoundException.cpp  LastRoundException.h  NotEnoughMoneyException.cpp  NotEnoughMoneyException.h  NullPointerException.cpp  NullPointerException.h  PlayerAlreadyInTeamException.cpp  PlayerAlreadyInTeamException.h  PlayerInOpponentTeamException.cpp  PlayerInOpponentTeamException.h  PlayerNotFoundException.cpp  PlayerNotFoundException.h  TeamIsFullException.cpp  TeamIsFullException.h  WeaponNotAvailableException.cpp  WeaponNotAvailableException.h  WeaponNotEquippedException.cpp  WeaponNotEquippedException.h  WeaponNotFoundException.cpp  WeaponNotFoundException.h  WeaponOfThisTypeAlreadyEquippedException.cpp  WeaponOfThisTypeAlreadyEquippedException.h
src/models/game/: Game.cpp  Game.h
src/models/player/: Player.cpp  Player.h  Side.h
src/models/weapon/: Weapon.cpp  Weapon.h  WeaponType.h
src/utils/data/: Data.cpp  Data.h
test/: CMakeLists.txt  GamePlayTest.cc  GameTest.cc  InteractionsTest.cc  PlayerTest.cc  WeaponTest.cc
test/mocks/: MockGame.h  MockGamePlay.h  MockPlayer.h  MockWeapon.h
